--- a/.github/workflows/go-cli-test.yml
+++ b/.github/workflows/go-cli-test.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
+    # create a file in the working directory
+    - name: Create a file
+      run: echo "Hello, World!" > yoooohooooo.txt
+
     - name: Run Go CLI Test
       uses: radugrecu/go-cli-test@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
