update commenter action name

--- a/.github/workflows/go-cli-test.yml
+++ b/.github/workflows/go-cli-test.yml
@@ -34,7 +34,7 @@ jobs:
         retention-days: 5
 
     - name: Run Go CLI Test
-      uses: radugrecu/go-cli-test@master
+      uses: radugrecu/trivy-terraform-pr-commenter
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         report_file: trivy-results.json
